# SELinuxIFCIL

./: .gitignore  CILgrammar.mly  CILlexer.mll  CILsyntax.ml  IFCILconfiguration.ml  IFCILconfiguration.mli  IFCILtoNuSMV  IFCILtoNuSMV.ml  IFCILverif  IFCILverif.ml  IFL.ml  IFL.mli  Makefile  NuSMVinput  README.md  SELinuxIFCIL.opam  Utils.ml  Utils.mli  cilbase-example-NuSMV  compile.sh  dssp5.out  dune  dune-project  expected_results.txt  generateout  main.ml  normalization.ml  normalization.mli  out  out2  out3  paper-example-IFCIL-NuSMV  preprocessing.ml  preprocessing.mli  prova.out  provaoutput  results.txt  run_experiments.sh  testCIL  testandr.sh  (+2 more)
CIL/: CILenv.ml  CILenv.mli  CILsemantics.ml  CILsemantics.mli  CILsyntax.ml  CILsyntax.mli
Examples/: __aosp_marlin-n2g47e-factory-ebc79a0b_sepolicy-cw.cil  __aosp_marlin-n2g47e-factory-ebc79a0b_sepolicy-enc.cil  __aosp_marlin-n2g47e-factory-ebc79a0b_sepolicy-tcb.cil  __aosp_marlin-n2g47e-factory-ebc79a0b_sepolicy.cil  __aosp_sailfish-njh47f-factory-6fd9b2c4_sepolicy-cw.cil  __aosp_sailfish-njh47f-factory-6fd9b2c4_sepolicy-enc.cil  __aosp_sailfish-njh47f-factory-6fd9b2c4_sepolicy-tcb.cil  __aosp_sailfish-njh47f-factory-6fd9b2c4_sepolicy.cil  __aosp_sailfish-opm1_171019_011-factory-56d15350_precompiled_sepolicy-cw.cil  __aosp_sailfish-opm1_171019_011-factory-56d15350_precompiled_sepolicy-enc.cil  __aosp_sailfish-opm1_171019_011-factory-56d15350_precompiled_sepolicy-tcb.cil  __aosp_sailfish-opm1_171019_011-factory-56d15350_precompiled_sepolicy.cil  __aosp_sailfish-pq2a_190205_003-factory-164a7269_precompiled_sepolicy.cil  (+23 more)
(+101 files in other folders)
